[package]
name = "destiny2day"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]

[dependencies]
dotenv = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
r2d2 = "0.7"
r2d2-diesel = "0.16"
quick-error = "1.2"
env_logger = "0.4"
log = "0.3"
reqwest = "0.8"
hyper = "0.11"

[dependencies.diesel]
version = "0.16"
default-features = false
features = ["sqlite", "serde_json"]

[dependencies.diesel_codegen]
version = "0.16"
default-features = false
features = ["sqlite", "dotenv"]

[lib]
name = "d2_api"
path = "src/d2_api.rs"

